drawing first svg line, adding D3, drafting branching class

--- a/project_code/index.html
+++ b/project_code/index.html
@@ -40,9 +40,15 @@
     <body>
 
         <!-- Add your site or application content here -->
+        <svg xmlns="http://www.w3.org/2000/svg" id="svg">
+            <!-- <line x1="20" y1="100" x2="100" y2="100" stroke-width="2" stroke="white"/> -->
+        </svg>
+
 
         <script src="js/vendor/zepto.min.js"></script>
         <script src="js/helper.js"></script>
+        <script src="js/vendor/d3.min.js"></script>
+        <script src="js/main.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
