refactoring classes into separate files

--- a/project_code/index.html
+++ b/project_code/index.html
@@ -48,6 +48,9 @@
         <script src="js/vendor/zepto.min.js"></script>
         <script src="js/helper.js"></script>
         <script src="js/vendor/d3.min.js"></script>
+        <script src="js/lp.js"></script>
+        <script src="js/branch.js"></script>
+        <script src="js/plant.js"></script>
         <script src="js/main.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
